business logic - delete bookings
