# public/swagger.json
@@ -398,6 +398,23 @@
 						}
 					}
 				}
+			},
+			"delete": {
+				"operationId": "Delete",
+				"responses": {
+					"204": {
+						"description": "No content"
+					},
+					"422": {
+						"description": "Validation Failed"
+					}
+				},
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": []
 			}
 		}
 	},
